--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "formsy-react",
+  "name": "ely-formsy-react",
   "version": "0.17.0",
   "description": "A form input builder and validator for React JS",
   "repository": {
