--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "registry": "http://nexus.elaxy.org/content/repositories/elaxy-npm/"
   },
   "dependencies": {
+    "decimal.js": "4.0.3",
     "form-data-to-object": "^0.1.0",
     "immutable": "^3.8.1",
     "moment": "^2.14.1"
