--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "decimal.js": "4.0.3",
     "form-data-to-object": "^0.1.0",
     "immutable": "^3.8.1",
-    "moment": "^2.14.1"
+    "moment": "^2.14.1",
+    "react": "15.6.2",
+    "react-dom": "15.6.2"
   },
   "devDependencies": {
     "babel": "^5.6.4",
@@ -39,16 +41,10 @@
     "jsdom": "^6.5.1",
     "lolex": "^1.3.2",
     "nodeunit": "^0.9.1",
-    "react": "15.6.2",
     "react-addons-pure-render-mixin": "15.6.2",
     "react-addons-test-utils": "15.6.2",
-    "react-dom": "15.6.2",
     "sinon": "^1.17.1",
     "webpack": "^1.7.3",
     "webpack-dev-server": "^1.7.0"
-  },
-  "peerDependencies": {
-    "react": "15.6.2",
-    "react-dom": "15.6.2"
   }
 }
