--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "formsy-react",
+  "name": "ely-formsy-react",
   "version": "1.1.4",
   "description": "A form input builder and validator for React",
   "keywords": [
